Audit remediation: security hardening, persistent rate limits, admin scalability, python 3.11 runtime

--- a/.dockerignore
+++ b/.dockerignore
@@ -12,5 +12,12 @@ __pycache__/
 .DS_Store
 firebase-credentials.json
 .env
+.env.*
 tests/
 docs/
+context_dump.txt
+test-*.pdf
+test-*.m4a
+*.pre-*backup*
+*.backup
+*.dump
