--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ firebase-credentials.json
 
 # Secret files
 .env
+.env.*
 
 # Virtual environment
 venv/
@@ -22,3 +23,11 @@ __pycache__/
 # Test files
 test-slides.pdf
 test-audio.m4a
+test-*.pdf
+test-*.m4a
+
+# Local debug/backups
+context_dump.txt
+*.pre-*backup*
+*.backup
+*.dump
