chore: add firestore FieldFilter helper and optional playwright e2e

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ venv/
 # Uploaded files
 uploads/
 functions/node_modules/
+node_modules/
+playwright-report/
+test-results/
 
 # Python cache
 __pycache__/
