Remediate audit_report_1_3: runtime jobs, admin session gating, upload hardening, prompt consistency, asset/perf updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Check tracked secrets/debug files
+        run: |
+          chmod +x scripts/check_no_tracked_secrets.sh
+          ./scripts/check_no_tracked_secrets.sh
 
       - name: Run pytest guardrail suite
         run: |
@@ -44,7 +49,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
