--- a/requirements.constraints.txt
+++ b/requirements.constraints.txt
@@ -11,6 +11,7 @@ cryptography==46.0.5
 exceptiongroup==1.3.1
 firebase-admin==6.4.0
 Flask==3.0.0
+Flask-Compress==1.15
 google-api-core==2.30.0
 google-api-python-client==2.190.0
 google-auth==2.49.0.dev0
